Big update, reimplemented a lot of poor logic with a nicer one

--- a/data/global.yml
+++ b/data/global.yml
@@ -1,6 +1,6 @@
 ---
-  student: "Киселев А.А."
+  student: "Фамилия И.О."
   group: 5361
   teacher: "Мартыненко А. И."
   variant: 7
-  year: 2010
+  year: 2012
