Added comments to data

--- a/data/10.yml
+++ b/data/10.yml
@@ -1,32 +1,32 @@
 ---
 1: {data: [
-	4.038936,
-	-0.845193,
-	-0.374326,
-	2.88263,
-	2.728097,
-	-0.532304,
-	-0.954105,
-	-0.954693,
-	2.470045,
-	1.051909,
-	-0.636919,
-	2.384277,
-	-0.918446,
-	4.832128,
-	2.678184,
-	3.971682,
-	3.221193,
-	3.207647,
-	0.668328,
-	2.151152,
-	3.733077,
-	0.021115,
-	4.68056,
-	2.256548,
-	4.49062],
-	histstart: 1,
-	histstep: 1.5
+    4.038936,
+    -0.845193,
+    -0.374326,
+    2.88263,
+    2.728097,
+    -0.532304,
+    -0.954105,
+    -0.954693,
+    2.470045,
+    1.051909,
+    -0.636919,
+    2.384277,
+    -0.918446,
+    4.832128,
+    2.678184,
+    3.971682,
+    3.221193,
+    3.207647,
+    0.668328,
+    2.151152,
+    3.733077,
+    0.021115,
+    4.68056,
+    2.256548,
+    4.49062],
+    histstart: 1,
+    histstep: 1.5
 }
 2: {data: [
 	13.19468,
@@ -210,3 +210,6 @@ title: "Геометрия"
 	36],
 title: "Дискр. мат."
 }
+# 8: { data: [1,2,3,4,5,6,7,8,9] }
+# See 7.yml for example# 8: { data: [1,2,3,4,5,6,7,8,9] } 
+# See 7.yml for example 
