Moving task 10 data to global.yml

--- a/data/global.yml
+++ b/data/global.yml
@@ -3,4 +3,14 @@
   group: 5361
   teacher: "Мартыненко А. И."
   variant: 7
-  year: 2012  
+  year: 2012
+  task10data: [0,
+               49,
+               90,
+               0,
+               60,
+               120,
+               0,
+               40,
+               100,
+               130]
